--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Profile</title>
+    <title>Takito's Profile</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700|Grandstander:300,400,500,700,900" rel="stylesheet">
@@ -13,12 +13,12 @@
       <div class="card-white" id="bio">
         <h1>Hello, I'm Tak :)</h1>
         <img src="/images/tak.png" class="img-circle" width="150px" alt="Tak Wong">
-        <p>I like QA and writing test cases. I also enjoy videogames and doggos.
+        <p>I like testing stuff in Prod. I also enjoy videogames and doggos.
         </p>
-        <a href="#" class="btn-purple">Leeeroyyy Jeeenkins!!!</a>
+        <a href="#" class="btn-purple">Follow Me, I'm a potato</a>
       </div>
       <div class="card-white">
-        <h2>Follow Me</h2>
+        <h2>Follow Me On:</h2>
         <ul class="list-inline">
           <li>
             <a href="https://github.com/takkyanwong" target="_blank">
