--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="card-white" id="bio">
         <h1>Hello, I'm Tak :)</h1>
-        <img src="/images/tak.png" class="img-circle" width="150px" alt="Tak Wong">
+        <img src="images/tak.png" class="img-circle" width="150px" alt="Tak Wong">
         <p>I like testing stuff in Prod. I also enjoy videogames and doggos.
         </p>
         <a href="#" class="btn-purple">Follow Me, I'm a potato</a>
